kubernetes/deploy&service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-dply
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: techhouse1901/reactdoc
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      
#2nd app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-dply
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: techhouse1901/angular
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-svc
spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#3rd app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-dply
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - name: sample
          image: devopsprosamples/next-path-sample-1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
spec:
  selector:
    app: sample
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
#kubectl create secret tls self-signed-tls  --key self-signed-tls.key --cert self-signed-tls.crt
